--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <section id="about-us">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col">
+            <div class="col about">
               <img src="./assets/about.png" alt="About Us" class="img-fluid"/>
             </div>
             <div class="col">
@@ -114,7 +114,7 @@
                and provides an intuitive environment for collaboration in design and engineering</p>
           </div>
           </div>
-
+          
           <div class="row align-items-center">
             <div class="col">
               <div class="card mb-3">
@@ -138,6 +138,7 @@
               </div>
             </div>       
           </div>
+
           <div class="row align-items-center">
             <div class="col">
               <div class="card mb-3">
